# projeto-ML

./: app.py  pyproject.toml
